# OpenGL-2D

./: .gitignore  CMakeLists.txt  OpenGL-2D.sln  README.md
OpenGL-2D/: OpenGL-2D.vcxproj  OpenGL-2D.vcxproj.filters
OpenGL-2D/Resources/Settings/: Settings.txt
OpenGL-2D/Resources/Shaders/: Sprite.frag  Sprite.vert  SpriteSheet.frag
OpenGL-2D/Source/: main.cpp
OpenGL-2D/Source/Core/: Camera.cpp  Camera.h  Engine.cpp  Engine.h  IRenderable.cpp  IRenderable.h  ITickable.h  Input.h  Logger.cpp  Logger.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  Settings.h  Shader.h  Sprite.cpp  Sprite.h  SpriteSheet.h  SpriteSheetAnimation.cpp  SpriteSheetAnimation.h  Texture.cpp  Texture.h  TickEngine.h  Time.h  Transform.cpp  Transform.h  Window.cpp  Window.h
OpenGL-2D/Source/Game/: Engine.h
Resources/Settings/: Settings.txt
Resources/Shaders/: SpriteSheet.frag  SpriteSheet.vert
Source/: main.cpp
Source/Core/: Camera.h  Engine.cpp  ITickable.cpp  Input.cpp  Input.h  Material.h  Mesh.h  Settings.cpp  Settings.h  Shader.cpp  Shader.h  SpriteSheet.cpp  SpriteSheet.h  SpriteSheetAnimation.h  Texture.cpp  Texture.h  TickEngine.cpp  Time.cpp  Transform.cpp  Transform.h  Window.h
Source/Core/Buffers/: Buffer.cpp  Buffer.h  IndexBuffer.cpp  VertexArray.cpp  VertexArray.h
Source/Core/Utils/: FileIO.cpp  ImageUtils.h  Random.h  StringUtils.cpp
Source/Game/: Engine.h  Utils.h
Source/Game/Examples/: AnimationsExample.cpp  AnimationsExample.h
Source/Game/Snake/: Direction.h  Snake.cpp  SnakePart.cpp  SnakePart.h
(+20 files in other folders)
